# RustyRaytracer

./: .gitignore  Cargo.toml  Dockerfile  README.md  render.ppm
benches/: raytracing_benchmark.rs
src/: constants.rs  cornell_box.rs  draw.rs  intersect.rs  lib.rs  main.rs  objects.rs  rays.rs  raytracing.rs  scene.rs  tests.rs  utils.rs  visualiser.rs
src/app/: app.rs
src/constants/: mod.rs
src/draw/: mod.rs
src/output/: mod.rs
src/raytracing/: mod.rs
src/tests/: mod.rs
src/utils/: mod.rs
