[package]
name = "raytracer"
version = "0.1.0"
authors = ["Louis Wyborn <louiswyborn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.6"
cgmath = "0.17.0"
winit = "0.23.0"
winit_input_helper = "0.8.0"
pixels = "0.2.0"
rand = "0.8.3"