[package]
name = "raytracer"
version = "0.1.0"
authors = ["Louis Wyborn <louiswyborn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
rand = "0.8.3"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "raytracing_benchmark"
harness = false